--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  width: 900px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+button, input {
+  font-family: inherit;
+  border: unset;
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+input {
+  padding: 5px 5px 5px 10px;
+  border: 1px solid #a9a9a9;
+}
+
+button {
+  cursor: pointer;
 }
